--- a/nvd_cache/cache.properties
+++ b/nvd_cache/cache.properties
@@ -1,19 +1,19 @@
-#Mon Feb 10 20:31:25 UTC 2025
+#Tue Feb 11 21:00:47 UTC 2025
 lastModifiedDate.2009=2024-11-21T01\:09\:51Z
 prefix=nvdcve-
 lastModifiedDate.2002=2025-01-16T20\:15\:27Z
-lastModifiedDate.2024=2025-02-10T18\:15\:32Z
+lastModifiedDate.2024=2025-02-11T16\:15\:47Z
 lastModifiedDate.2023=2025-02-03T14\:15\:37Z
 lastModifiedDate.2004=2025-02-07T15\:15\:10Z
 lastModifiedDate.2003=2024-11-20T23\:47\:27Z
-lastModifiedDate.2025=2025-02-10T20\:15\:42Z
+lastModifiedDate.2025=2025-02-11T20\:57\:42Z
 lastModifiedDate.2006=2025-01-17T14\:15\:30Z
 lastModifiedDate.2005=2025-01-16T20\:15\:30Z
 lastModifiedDate.2008=2024-11-21T00\:54\:56Z
 lastModifiedDate.2007=2024-11-21T00\:40\:34Z
-lastModifiedDate.2011=2025-01-06T19\:22\:10Z
+lastModifiedDate.2011=2025-02-10T20\:15\:32Z
 lastModifiedDate.2010=2025-01-21T18\:15\:09Z
-lastModifiedDate=2025-02-10T20\:15\:42Z
+lastModifiedDate=2025-02-11T20\:57\:42Z
 lastModifiedDate.2013=2025-01-14T19\:29\:55Z
 lastModifiedDate.2012=2024-12-19T19\:49\:43Z
 lastModifiedDate.2015=2025-02-04T22\:15\:34Z
@@ -21,7 +21,8 @@ lastModifiedDate.2014=2024-11-21T02\:20\:52Z
 lastModifiedDate.2017=2025-01-14T19\:29\:55Z
 lastModifiedDate.2016=2025-02-10T17\:15\:13Z
 lastModifiedDate.2019=2025-02-07T14\:54\:34Z
-lastModifiedDate.2018=2025-02-07T17\:15\:14Z
+lastModifiedDate.2018=2025-02-11T20\:11\:38Z
 lastModifiedDate.2020=2025-02-04T21\:15\:20Z
 lastModifiedDate.2022=2025-01-28T22\:15\:09Z
-lastModifiedDate.2021=2024-12-24T02\:00\:01Z
+lastModifiedDate.2021=2025-02-11T15\:25\:36Z
+lastModifiedDate.modified=2025-02-11T21\:00\:46Z
