--- a/nvd_cache/cache.properties
+++ b/nvd_cache/cache.properties
@@ -1,28 +1,29 @@
-#Thu Feb 20 21:08:21 UTC 2025
-lastModifiedDate.2009=2025-02-13T17\:42\:36Z
+#Tue Apr 22 19:08:07 UTC 2025
+lastModifiedDate.2009=2025-04-09T00\:30\:58Z
 prefix=nvdcve-
-lastModifiedDate.2002=2025-02-07T15\:15\:09Z
-lastModifiedDate.2024=2025-02-20T20\:59\:09Z
-lastModifiedDate.2023=2025-02-20T20\:15\:44Z
-lastModifiedDate.2004=2025-02-07T15\:15\:10Z
-lastModifiedDate.2003=2024-11-20T23\:47\:27Z
-lastModifiedDate.2025=2025-02-20T20\:41\:40Z
-lastModifiedDate.2006=2025-02-07T14\:15\:31Z
-lastModifiedDate.2005=2025-02-07T15\:15\:11Z
-lastModifiedDate.2008=2025-02-10T20\:15\:30Z
-lastModifiedDate.2007=2025-02-07T15\:15\:11Z
-lastModifiedDate.2011=2025-02-13T17\:51\:50Z
-lastModifiedDate.2010=2025-02-19T19\:47\:04Z
-lastModifiedDate=2025-02-20T20\:59\:09Z
-lastModifiedDate.2013=2025-02-14T16\:00\:04Z
-lastModifiedDate.2012=2025-02-19T19\:45\:26Z
-lastModifiedDate.2015=2025-02-20T18\:32\:30Z
-lastModifiedDate.2014=2025-02-14T16\:04\:57Z
-lastModifiedDate.2017=2025-02-20T18\:06\:20Z
-lastModifiedDate.2016=2025-02-20T18\:34\:50Z
-lastModifiedDate.2019=2025-02-20T18\:05\:05Z
-lastModifiedDate.2018=2025-02-20T18\:05\:36Z
-lastModifiedDate.2020=2025-02-20T18\:34\:50Z
-lastModifiedDate.2022=2025-02-20T20\:15\:44Z
-lastModifiedDate.2021=2025-02-20T18\:32\:30Z
-lastModifiedDate.modified=2025-02-20T20\:59\:09Z
+lastModifiedDate.2002=2025-04-20T01\:37\:25Z
+lastModifiedDate.2024=2025-04-22T18\:16\:00Z
+lastModifiedDate.2023=2025-04-22T14\:51\:37Z
+lastModifiedDate.2004=2025-04-03T01\:03\:51Z
+lastModifiedDate.2003=2025-04-03T01\:03\:51Z
+lastModifiedDate.2025=2025-04-22T18\:43\:07Z
+lastModifiedDate.2006=2025-04-09T00\:30\:58Z
+lastModifiedDate.2005=2025-04-03T01\:03\:51Z
+lastModifiedDate.2008=2025-04-09T00\:30\:58Z
+lastModifiedDate.2007=2025-04-09T00\:30\:58Z
+cache.is.new=false
+lastModifiedDate.2011=2025-04-11T00\:51\:21Z
+lastModifiedDate.2010=2025-04-11T00\:51\:21Z
+lastModifiedDate=2025-04-22T18\:43\:07Z
+lastModifiedDate.2013=2025-04-22T14\:51\:37Z
+lastModifiedDate.2012=2025-04-11T00\:51\:21Z
+lastModifiedDate.2015=2025-04-21T15\:09\:01Z
+lastModifiedDate.2014=2025-04-12T10\:46\:40Z
+lastModifiedDate.2017=2025-04-20T01\:37\:25Z
+lastModifiedDate.2016=2025-04-12T10\:46\:40Z
+lastModifiedDate.2019=2025-04-17T21\:15\:45Z
+lastModifiedDate.2018=2025-04-20T01\:37\:25Z
+lastModifiedDate.2020=2025-04-22T14\:51\:37Z
+lastModifiedDate.2022=2025-04-22T18\:15\:57Z
+lastModifiedDate.2021=2025-04-17T18\:31\:27Z
+lastModifiedDate.modified=2025-04-22T18\:43\:07Z
